<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.whenwhererpi.Catalog_page"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000" >

        <TextView
            android:id="@+id/searchEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/search_bar3"
            android:clickable="false"
            android:ems="10"
            android:gravity="center"
            android:text="@string/building"
            android:textColor="#ffffff"
            android:textSize="@dimen/abc_dropdownitem_icon_width" >
        </TextView>
        
        
        <Button
            android:id="@+id/searchButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/button"
            android:text="@string/s"
            android:onClick="switchToSearchPage" />

        <Button
            android:id="@+id/catalogButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/button"
            android:text="@string/c"
            android:onClick="switchToCatalogPage" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/catalogButton"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/searchEditText"
            android:divider="#ffffff"
            android:dividerHeight="1dip"  >

        </ListView>
        
    </RelativeLayout>

</FrameLayout>
